tests/fixtures/invalid/bad_return_type.torel
unit fixtures.bad_return_type;

export proc main() -> Int32 {
    return Exit.ok;
}
